deploy: 0d7b439a4790ff0fa9019052dc8ae8973ec797bf

--- a/index.html
+++ b/index.html
@@ -528,6 +528,10 @@
     <div class="row footer-btm mt-5 pt-4 border-top">
       <div class="col-lg-6">
         
+        <div class="addthis_inline_share_toolbox"></div>    
+      </div>
+      <div class="col-lg-6">
+        
         <p class="footer-copy">
           Copyright © 2019 <a href="https://gethugothemes.com">GetHugoThemes</a> All Rights Reserved
         </p>
@@ -553,6 +557,9 @@
 
 
 <script src="https://www.googleoptimize.com/optimize.js?id=OPT-P2PZZ7G"></script>
+
+ 
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5f62777a23e9b1db"></script> 
 
 <!-- Main Script -->
 
