deploy: d3851948f6fcf1201e961531b6bf1f6ebcfdee63

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us"><head>
+<html lang="pl"><head>
   <meta charset="utf-8">
   <title>Współbieżność w Javie</title>
 
@@ -396,7 +396,7 @@
       <div class="col-lg-3 col-md-6 col-sm-6">
         <div class="book-item mb-4 mb-lg-0">
           <div><strong>JIT me baby one more time</strong></div>
-          <img src="https://i3.ytimg.com/vi/g6yUSonoM44/hqdefault.jpg" alt="" class="img-fluid">
+          <img src="https://i3.ytimg.com/vi/g6yUSonoM44/hqdefault.jpg" alt="JIT me baby one more time" class="img-fluid">
           <a href="https://www.youtube.com/watch?v=g6yUSonoM44" class="hover-item">
             <i class="ti-link"></i>
           </a>
@@ -406,7 +406,7 @@
       <div class="col-lg-3 col-md-6 col-sm-6">
         <div class="book-item mb-4 mb-lg-0">
           <div><strong>Who ate my RAM?</strong></div>
-          <img src="https://i3.ytimg.com/vi/bJAg_23ixmY/hqdefault.jpg" alt="" class="img-fluid">
+          <img src="https://i3.ytimg.com/vi/bJAg_23ixmY/hqdefault.jpg" alt="Who ate my RAM?" class="img-fluid">
           <a href="https://www.youtube.com/watch?v=bJAg_23ixmY" class="hover-item">
             <i class="ti-link"></i>
           </a>
@@ -416,7 +416,7 @@
       <div class="col-lg-3 col-md-6 col-sm-6">
         <div class="book-item mb-4 mb-lg-0">
           <div><strong>Wszystkich nas czeka zagłada...</strong></div>
-          <img src="https://i3.ytimg.com/vi/-ccFyYRYvBg/hqdefault.jpg" alt="" class="img-fluid">
+          <img src="https://i3.ytimg.com/vi/-ccFyYRYvBg/hqdefault.jpg" alt="Wszystkich nas czeka zagłada..." class="img-fluid">
           <a href="https://www.youtube.com/watch?v=-ccFyYRYvBg" class="hover-item">
             <i class="ti-link"></i>
           </a>
@@ -426,7 +426,7 @@
       <div class="col-lg-3 col-md-6 col-sm-6">
         <div class="book-item mb-4 mb-lg-0">
           <div><strong>Czy wydajność to jakość?</strong></div>
-          <img src="https://i3.ytimg.com/vi/Ag9mBOjSeb8/hqdefault.jpg" alt="" class="img-fluid">
+          <img src="https://i3.ytimg.com/vi/Ag9mBOjSeb8/hqdefault.jpg" alt="Czy wydajność to jakość?" class="img-fluid">
           <a href="https://www.youtube.com/watch?v=Ag9mBOjSeb8" class="hover-item">
             <i class="ti-link"></i>
           </a>
